--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,40 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+### Maven Wrapper ###
+.mvn/wrapper/maven-wrapper.properties
+mvnw
+mvnw.cmd
+
+### log ###
+*.log
+
+### temporary ###
+*.swp
+*.swo
+*~
+Thumbs.db
+
+### compile ###
+*.class
+
+### test ###
+surefire-reports/
+jacoco.exec
+
+### Package Files ###
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+target
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+.gradle
+build
